# MyEngine

./: Makefile  imgui.ini
imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_sdl3.cpp  imgui_impl_sdlrenderer3.cpp  imgui_tables.cpp  imgui_widgets.cpp
imgui-docking/: imgui.cpp  imgui_draw.cpp  imgui_impl_sdl3.cpp
src/: CMakeLists.txt  main.cpp
src/Engine/: Engine.cpp  Engine.hpp  engine.hpp
src/Engine/Source/: MacroTools.hpp
src/Engine/Source/Debug/private/: Debug.cpp
src/Engine/Source/Debug/public/: Debug.hpp
src/Engine/Source/DevGUI/private/: DevGUI.cpp
src/Engine/Source/DevGUI/public/: DevGUI.hpp
src/Engine/Source/Engine/private/: Engine.cpp
src/Engine/Source/Input/public/: Input.hpp
src/Engine/Source/Loader/public/: Loader.hpp
src/Engine/Source/Sprite2D/public/: Sprite2D.hpp
src/Engine/Source/Time/private/: Time.cpp
src/Engine/Source/Time/public/: Time.hpp
src/Engine/Source/Window/private/: Window.cpp
src/Engine/Source/Window/public/: Window.hpp
src/Engine/Window/private/: window.cpp
src/Engine/Window/public/: window.hpp
